--- a/project/qiushi/pages/askQuestion/askQuestion.wxml
+++ b/project/qiushi/pages/askQuestion/askQuestion.wxml
@@ -1,3 +1,8 @@
 <view class="container">
-    <text>导航测试</text>
+    <view class="btnLine">
+        <view class="btnSubmit">
+            发布
+        </view>
+    </view>
+    
 </view>
