--- a/project/qiushi/pages/index/index.wxml
+++ b/project/qiushi/pages/index/index.wxml
@@ -1,28 +1,42 @@
 <!--index.wxml-->
-<view class="container">
+<scroll-view class="container" scroll-y="true" bindscrolltolower="loadMore" bindscroll="scroll">
   <view class="toAskQuestion">
     <navigator url="/pages/askQuestion/askQuestion" hover-class="other-navigator-hover">
-      <button type="primary" class>发布悬赏</button>
+      <button type="primary" class="toAskQuestionBtn">发布悬赏</button>
     </navigator>
   </view>
   <view class="rewardProtocol">
-    <text>悬赏规则></text>
+    <text bindtap="toRewardProtocol">悬赏规则></text>
   </view>
-  <view class="tabLine">
-    <view class="tabLeft tabNow">进行中</view>
-    <view class="tabRight">已解决</view>
-  </view>
-  <view class="squareQuestion">
-    <image class="squareAvatar" src="{{questionList[0].from.avatar}}"></image>
-    <view class="questionHead">
-      <view class="questionInfo">
-        <text class="squareName">{{questionList[0].from.name}}</text>
-        <text class="squareTime">还剩666小时</text>
-      </view>
-      <view class="questionInfo">
-        <text class="squareReward">赏金 {{questionList[0].reward}} 元</text>
-        <text class="squareAnswerNum">{{questionList[0].answerNum}} 回答</text>
+  <block wx:if="{{state == 0}}">
+    <view class="tabLine">
+      <view class="tabLeft tabNow">进行中</view>
+      <view class="tabRight" bindtap="toSolved">已解决</view>
+    </view>
+  </block>
+  <block wx:else>
+    <view class="tabLine">
+      <view class="tabLeft" bindtap="toSolving">进行中</view>
+      <view class="tabRight tabNow">已解决</view>
+    </view>
+  </block>
+  <view class="squareQuestion" wx:for="{{questionList}}" >
+    <view class="squareQuestionHead">
+      <image class="squareAvatar" src="{{item.from.avatar}}"></image>
+      <view class="questionInfoContainer">
+        <view class="questionInfo">
+          <text class="squareName">{{item.from.name}}</text>
+          <text class="squareTime">还剩666小时</text>
+        </view>
+        <view class="questionInfo">
+          <text class="squareReward">赏金 {{item.reward}} 元</text>
+          <text class="squareAnswerNum">{{item.answerNum}} 回答</text>
+        </view>
       </view>
     </view>
+    <view class="squareQuestionBody">
+      <text>Q：{{item.question}}</text>
+    </view>
+    <view class="squareQuestionEnd"></view>
   </view>
-</view>
+</scroll-view>
